--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ nav{
     height: 17vh;
 }
 .nav-links{
-    gap: 2rem;
+    gap: 3rem;
     list-style: none;
     font-size: 1.5rem;
 }
@@ -61,7 +61,7 @@ a:hover{
     cursor: default;
 }
 
-/*Hamburger-nav*/
+/* Hamburger Menu */
 
 #hamburger-nav{
     display: none;
@@ -97,9 +97,9 @@ a:hover{
     width: fit-content;
     max-height: 0;
     overflow: hidden;
-    transition:all 0.3 ease-in-out ;
+    transition: all 0.3 ease-in-out ;
 }
-,.menu-links a {
+.menu-links a {
     display: block;
     padding: 10px;
     text-align: center;
@@ -136,7 +136,7 @@ a:hover{
     transform: none;
 }
 
-/* Setions*/
+/* Sections*/
 section {
     padding: 4vh;
     height: 96vh;
@@ -238,4 +238,161 @@ section {
 }
 .btn-container{
     gap:1rem;
+}
+
+/*About section*/
+
+#about{
+    position: relative;
+
+}
+.about-containers{
+    gap: 2rem;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+
+}
+.about-details-container{
+    justify-content: center;
+    flex-direction: column;
+}
+
+.about-containers, 
+.about-details-container{
+    display: flex;
+}
+.about-pic{
+    border-radius: 2rem;
+}
+.arrow{
+    position: absolute;
+    right: -5rem;
+    bottom: 2.5rem;
+
+}
+.details-container{
+    padding: 1.5rem;
+    flex: 1;
+    background: white;
+    border-radius: 2rem;
+    border:rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    text-align: center;
+}
+.section-container{
+    gap: 8rem;
+    height: 80%;
+
+}
+
+.section__pic-container{
+    height: 400px;
+    width: 400px;
+    margin: auto 0;
+
+}
+
+/*Experience section*/
+
+#experience{
+    position: relative;
+}
+.experience-sub-title{
+    color: rgb(85, 85, 85);
+    font-weight: 600;
+    font-size: 1.75rem;
+    margin-bottom: 2rem;
+}
+.experience-details-container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.article-container{
+    display: flex;
+    text-align: initial;
+    flex-wrap: wrap ;
+    flex-direction: row;
+    gap: 2.5rem;
+    justify-content: space-around;
+}
+article{
+    display: flex;
+    width: 10rem;
+    justify-content: space-around;
+    gap: 0.5rem;
+}
+article .icon{
+   cursor: default;
+
+}
+
+/*projects sections*/
+#projects{
+    position:relative;
+}
+.color-container{
+    border: rgb(163, 163, 163);
+    background: rgb(250, 250, 250);
+}
+.project-img{
+    border-radius: 2rem;
+    width: 90%;
+    height: 90%;
+}
+
+.project-title{
+    margin: 1rem;
+    color: black;
+}
+.project-btn{
+    color: black;
+    border-color: rgb(163, 163, 163);
+}
+
+
+/*contact*/
+#contact{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 70vh;
+}
+
+.contact-info-upper-container{
+    display: flex;
+    justify-content: center;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    background: rgb(250, 250, 250);
+    margin: 2rem auto;
+    padding: 0.5rem;
+}
+.contact-info-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    grid-auto-flow: 0.5rem;
+    margin: 1rem;
+}
+.contact-info-container{
+    font-size:larger;
+}
+.contact-icon{
+    cursor: default ;
+    
+}
+.email-icon{
+    height: 2.0rem;
+}
+
+/*Footer Section*/
+footer{
+    height: 26vh;
+    margin: 0 1rem;
+}
+footer p{
+    text-align: center;
 }
